Fixed nowrap bug

--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -76,7 +76,6 @@ p, .content li {
 
 .account-bar li, p {
     font-size: 13px;
-    white-space: nowrap;
     margin-left: 0.5em;
     margin-bottom: 0;
 }
